welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: too many arguments for method droite: ()Unit
  case "R" => droite(1);avance()
                    ^